--- a/Example/JAPagerViewController/Base.lproj/Main.storyboard
+++ b/Example/JAPagerViewController/Base.lproj/Main.storyboard
@@ -20,9 +20,24 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zmo-CF-93S">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="Zmo-CF-93S" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="EWD-KJ-h1W"/>
+                            <constraint firstAttribute="trailing" secondItem="Zmo-CF-93S" secondAttribute="trailing" id="fZO-qo-lPQ"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="Zmo-CF-93S" secondAttribute="bottom" id="hjC-wF-aOH"/>
+                            <constraint firstItem="Zmo-CF-93S" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="yLv-B2-Sjs"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="EW1-qp-Ran"/>
+                    <connections>
+                        <outlet property="containerView" destination="Zmo-CF-93S" id="ids-fQ-3uP"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
