--- a/Example/JAPagerViewController/Base.lproj/Main.storyboard
+++ b/Example/JAPagerViewController/Base.lproj/Main.storyboard
@@ -21,27 +21,70 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zmo-CF-93S">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="urZ-Tr-Fty">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </view>
+                                <subviews>
+                                    <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Z5g-Vg-jui">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="301.5"/>
+                                    </containerView>
+                                    <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P0X-IS-3yB">
+                                        <rect key="frame" x="0.0" y="301.5" width="375" height="301.5"/>
+                                    </containerView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Zmo-CF-93S" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="EWD-KJ-h1W"/>
-                            <constraint firstAttribute="trailing" secondItem="Zmo-CF-93S" secondAttribute="trailing" id="fZO-qo-lPQ"/>
-                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="Zmo-CF-93S" secondAttribute="bottom" id="hjC-wF-aOH"/>
-                            <constraint firstItem="Zmo-CF-93S" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="yLv-B2-Sjs"/>
+                            <constraint firstAttribute="trailing" secondItem="urZ-Tr-Fty" secondAttribute="trailing" id="7bs-cT-t3q"/>
+                            <constraint firstItem="urZ-Tr-Fty" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" id="k9f-rG-oXF"/>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="urZ-Tr-Fty" secondAttribute="bottom" id="uCE-lT-JcQ"/>
+                            <constraint firstItem="urZ-Tr-Fty" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="yCy-1Y-VNa"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="EW1-qp-Ran"/>
                     <connections>
-                        <outlet property="containerView" destination="Zmo-CF-93S" id="ids-fQ-3uP"/>
+                        <outlet property="imageContainerView" destination="P0X-IS-3yB" id="qn3-tR-E2a"/>
+                        <outlet property="titleContainerView" destination="Z5g-Vg-jui" id="BQN-4P-he6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1076" y="132.68365817091455"/>
+            <point key="canvasLocation" x="982" y="-564"/>
+        </scene>
+        <!--Content View Controller-->
+        <scene sceneID="FsA-oB-yEN">
+            <objects>
+                <viewController storyboardIdentifier="ContentViewController" id="c3E-R7-7pz" customClass="ContentViewController" customModule="JAPagerViewController_Example" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="uih-8j-sgH"/>
+                        <viewControllerLayoutGuide type="bottom" id="2o6-ne-bRX"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="wdy-VL-8so">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EoD-Lc-oFe">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="80"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="EoD-Lc-oFe" secondAttribute="trailing" id="WDc-ui-Co8"/>
+                            <constraint firstItem="EoD-Lc-oFe" firstAttribute="top" secondItem="uih-8j-sgH" secondAttribute="bottom" id="r4r-lN-pJO"/>
+                            <constraint firstItem="EoD-Lc-oFe" firstAttribute="leading" secondItem="wdy-VL-8so" secondAttribute="leading" id="vXy-ze-MnN"/>
+                            <constraint firstItem="2o6-ne-bRX" firstAttribute="top" secondItem="EoD-Lc-oFe" secondAttribute="bottom" id="zJ3-5y-Er7"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="demoLabel" destination="EoD-Lc-oFe" id="GQu-eu-tIt"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="U6l-Gb-Vzb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1631" y="-556"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Y0f-ee-nMM">
