--- a/JAPagerViewController/Classes/JATabViewCell.xib
+++ b/JAPagerViewController/Classes/JATabViewCell.xib
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,15 +12,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="JATabViewCell" id="gTV-IL-0wX" customClass="JATabViewCell" customModule="JAPagerExample" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="JATabViewCell" id="gTV-IL-0wX" customClass="JATabViewCell" customModule="JAPagerViewController" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="w2M-wK-K7x">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="w2M-wK-K7x">
                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="50" id="XwT-XU-Sby"/>
+                        </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rgI-ZM-XtX">
                         <rect key="frame" x="5" y="0.0" width="40" height="50"/>
@@ -40,14 +44,13 @@
                 <constraint firstItem="rgI-ZM-XtX" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="9LX-V5-7UT"/>
                 <constraint firstAttribute="trailing" secondItem="rgI-ZM-XtX" secondAttribute="trailing" constant="5" id="Inr-10-Ugq"/>
                 <constraint firstItem="jpR-8m-U8m" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Miw-rf-nJQ"/>
-                <constraint firstAttribute="trailing" secondItem="w2M-wK-K7x" secondAttribute="trailing" id="Op9-hL-oU4"/>
-                <constraint firstItem="w2M-wK-K7x" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="SWq-n6-qW4"/>
-                <constraint firstAttribute="bottom" secondItem="w2M-wK-K7x" secondAttribute="bottom" id="Tek-Gw-bij"/>
                 <constraint firstAttribute="bottom" secondItem="jpR-8m-U8m" secondAttribute="bottom" id="UMj-57-fRz"/>
                 <constraint firstAttribute="trailing" secondItem="jpR-8m-U8m" secondAttribute="trailing" id="ZjH-PO-avm"/>
+                <constraint firstItem="w2M-wK-K7x" firstAttribute="centerY" secondItem="ZTg-uK-7eu" secondAttribute="centerY" id="c9e-eK-jr9"/>
+                <constraint firstItem="w2M-wK-K7x" firstAttribute="centerX" secondItem="ZTg-uK-7eu" secondAttribute="centerX" id="glK-zt-CXq"/>
                 <constraint firstItem="rgI-ZM-XtX" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="rvp-bd-er2"/>
                 <constraint firstAttribute="bottom" secondItem="rgI-ZM-XtX" secondAttribute="bottom" id="sVs-KX-5fv"/>
-                <constraint firstItem="w2M-wK-K7x" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="smL-vT-hPQ"/>
+                <constraint firstItem="w2M-wK-K7x" firstAttribute="height" secondItem="gTV-IL-0wX" secondAttribute="height" id="vHF-B0-1P7"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <connections>
